<?xml version="1.0"?>
<package format="2">
  <name>hypothesis</name>
  <version>:{version}</version>
  <description>
  Advanced property-based (QuickCheck-like) testing for Python
  </description>

  <license>MPL</license>

  <url type="repository">https://github.com/HypothesisWorks/hypothesis-python</url>
  <url type="bugtracker">https://github.com/HypothesisWorks/hypothesis-python/issues</url>

  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.2.0">catkin_pip</build_depend>

  <depend>python-enum34</depend> <!-- we need it (python2.7) -->
  <!-- <depend>pytz</depend> NO ubuntu Trusty package -->
  <!-- <depend version_gte="2.8.0">pytest</depend> --> <!-- system python on trusty is too old for hypothesis requirements. if needed we need to backport 2.8.7 to indigo/jade -->
  <!-- <depend>numpy</depend> is it really needed ?? -->

  <test_depend>flaky</test_depend>  <!-- available in ubuntu since xenial at 3.1.0. need backporting in indigo/jade -->

  <export>
    <rosdoc external_url="http://hypothesis.works/" />
  </export>

</package>


